[project]
name = "emoji_chat"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "vvanglro", email = "vvanglro@gmail.com"},
]
dependencies = [
    "fastapi>=0.111.0",
    "obscure64>=0.1.0",
    "orjson>=3.10.5",
    "tinydb>=4.8.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
